--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,7 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #DA0E7F,
+  primary:    #908E00,
   secondary:  #02932C,
   danger:     #f53d3d,
   light:      #f4f4f4,
