working on bid layout

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,9 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  grey: #EEEEEE
+  grey: #EEEEEE,
+  green: green,
+  red: red,
 );
 
 
