Creating bid detail page and budget views for providers

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,9 +40,16 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   grey: #EEEEEE,
-  green: green,
-  red: red,
+  green: #00E676,
+  red:#EF5350
 );
+
+$background-color: #FFFFFA;
+//$toolbar-background: #02FFFF;
+
+
+
+
 
 
 // App iOS Variables
