bid choose winner button working

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,8 @@ $colors: (
   dark:       #222,
   grey: #EEEEEE,
   green: #00E676,
-  red:#EF5350
+  red:#EF5350,
+  white: #FFF
 );
 
 $background-color: #FFFFFA;
